--- a/WPF_EXAM_2/WPF_EXAM_2.csproj
+++ b/WPF_EXAM_2/WPF_EXAM_2.csproj
@@ -74,7 +74,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="MainWIndowViewModel.cs" />
-    <Compile Include="Timer.cs" />
+    <Compile Include="Number.cs" />
     <Compile Include="UserControlCalc.xaml.cs">
       <DependentUpon>UserControlCalc.xaml</DependentUpon>
     </Compile>
